crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__cast_precedence.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 8
            params:
              open:
                start: 8
                end: 9
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 2
                        span:
                          start: 9
                          end: 10
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 12
                          end: 15
                    span:
                      start: 9
                      end: 15
                  separator:
                    start: 15
                    end: 16
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 4
                        span:
                          start: 17
                          end: 18
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 20
                          end: 23
                    span:
                      start: 17
                      end: 23
                  separator: ~
              close:
                start: 23
                end: 24
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 28
                end: 31
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 32
                    end: 33
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Binary:
                                left:
                                  inner:
                                    Identifier:
                                      symbol: 2
                                  span:
                                    start: 34
                                    end: 35
                                operator:
                                  inner: Add
                                  span:
                                    start: 36
                                    end: 37
                                right:
                                  inner:
                                    Cast:
                                      value:
                                        inner:
                                          Identifier:
                                            symbol: 4
                                        span:
                                          start: 38
                                          end: 39
                                      ty:
                                        inner:
                                          Identifier:
                                            symbol: 3
                                        span:
                                          start: 43
                                          end: 46
                                  span:
                                    start: 38
                                    end: 46
                            span:
                              start: 34
                              end: 46
                        span:
                          start: 34
                          end: 46
                      separator: ~
                  close:
                    start: 47
                    end: 48
            span:
              start: 32
              end: 48
      span:
        start: 0
        end: 48
    separator: ~
  - inner:
      inner:
        Function:
          id: 1
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 5
              span:
                start: 52
                end: 57
            params:
              open:
                start: 57
                end: 58
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 6
                        span:
                          start: 58
                          end: 59
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 61
                          end: 64
                    span:
                      start: 58
                      end: 64
                  separator: ~
              close:
                start: 64
                end: 65
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 69
                end: 72
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 73
                    end: 74
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Unary:
                                operator:
                                  inner: InvertSign
                                  span:
                                    start: 75
                                    end: 76
                                operand:
                                  inner:
                                    Cast:
                                      value:
                                        inner:
                                          Identifier:
                                            symbol: 6
                                        span:
                                          start: 76
                                          end: 77
                                      ty:
                                        inner:
                                          Identifier:
                                            symbol: 3
                                        span:
                                          start: 81
                                          end: 84
                                  span:
                                    start: 76
                                    end: 84
                            span:
                              start: 75
                              end: 84
                        span:
                          start: 75
                          end: 84
                      separator: ~
                  close:
                    start: 85
                    end: 86
            span:
              start: 73
              end: 86
      span:
        start: 49
        end: 86
    separator: ~
