crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__const.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Const:
          id: 0
          name:
            inner: 1
            span:
              start: 6
              end: 9
          ty:
            inner:
              Identifier:
                symbol: 2
            span:
              start: 11
              end: 14
          value:
            inner:
              Int:
                value: 100
            span:
              start: 17
              end: 20
      span:
        start: 0
        end: 20
    separator: ~
