crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__enum.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Enum:
          id: 0
          repr: ~
          name:
            inner: 1
            span:
              start: 5
              end: 10
          variants:
            open:
              start: 11
              end: 12
            inner:
              - inner:
                  inner:
                    name:
                      inner: 2
                      span:
                        start: 17
                        end: 20
                    value: ~
                  span:
                    start: 17
                    end: 20
                separator:
                  start: 20
                  end: 21
              - inner:
                  inner:
                    name:
                      inner: 3
                      span:
                        start: 26
                        end: 31
                    value:
                      inner:
                        Int:
                          value: 1
                      span:
                        start: 34
                        end: 35
                  span:
                    start: 26
                    end: 35
                separator:
                  start: 35
                  end: 36
              - inner:
                  inner:
                    name:
                      inner: 4
                      span:
                        start: 41
                        end: 45
                    value: ~
                  span:
                    start: 41
                    end: 45
                separator:
                  start: 45
                  end: 46
            close:
              start: 47
              end: 48
      span:
        start: 0
        end: 48
    separator: ~
