crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__export_alias.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 0
              span:
                start: 3
                end: 6
            type_params: []
            params:
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 1
                      span:
                        start: 7
                        end: 8
                    ty:
                      inner:
                        Path:
                          - ident:
                              inner: 2
                              span:
                                start: 10
                                end: 13
                            type_args: []
                      span:
                        start: 10
                        end: 13
                  span:
                    start: 7
                    end: 13
                separator:
                  start: 13
                  end: 14
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 3
                      span:
                        start: 15
                        end: 16
                    ty:
                      inner:
                        Path:
                          - ident:
                              inner: 2
                              span:
                                start: 18
                                end: 21
                            type_args: []
                      span:
                        start: 18
                        end: 21
                  span:
                    start: 15
                    end: 21
                separator: ~
            result:
              inner:
                Path:
                  - ident:
                      inner: 2
                      span:
                        start: 26
                        end: 29
                    type_args: []
              span:
                start: 26
                end: 29
          block:
            inner:
              Block:
                statements:
                  - inner:
                      inner:
                        Expression:
                          inner:
                            Binary:
                              left:
                                inner:
                                  Path:
                                    - ident:
                                        inner: 1
                                        span:
                                          start: 32
                                          end: 33
                                      type_args: []
                                span:
                                  start: 32
                                  end: 33
                              operator:
                                inner: Add
                                span:
                                  start: 34
                                  end: 35
                              right:
                                inner:
                                  Path:
                                    - ident:
                                        inner: 3
                                        span:
                                          start: 36
                                          end: 37
                                      type_args: []
                                span:
                                  start: 36
                                  end: 37
                          span:
                            start: 32
                            end: 37
                      span:
                        start: 32
                        end: 37
                    separator: ~
            span:
              start: 30
              end: 39
      span:
        start: 0
        end: 39
    separator: ~
  - inner:
      inner:
        Export:
          entries:
            - inner:
                inner:
                  name:
                    inner: 0
                    span:
                      start: 49
                      end: 52
                  alias:
                    inner: 4
                    span:
                      start: 56
                      end: 66
                span:
                  start: 49
                  end: 66
              separator: ~
      span:
        start: 40
        end: 68
    separator: ~
